Fix shift pupup

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -231,6 +231,7 @@ body {
       content: '';
       background-color: #162C4E;
       position: fixed;
+      top:0;
       width: 100%;
       height: 100%;
       z-index: 9999;
